# GtkScintilla

./: .gitignore  Makefile.am  autogen.sh  configure.ac  gtkscintilla-1.0.pc.in  index.html
demo/: .debugger  .gitignore  Makefile.am  demo.c  demo2.c  demo2.ui  gtkscintilla-demo  gtkscintilla-demo2
scintilla/: Makefile.am
scintilla-lib/: Makefile.am
scintilla/.hg/: branchheads.cache  dirstate  hgrc  tags.cache  undo.desc  undo.dirstate
scintilla/.hg/cache/: branchheads
scintilla/.hg/store/: 00changelog.d  00changelog.i  00manifest.d  00manifest.i  fncache  undo
scintilla/.hg/store/data/: .hgeol.i  .hgignore.i  .hgtags.i  _license.txt.i  _r_e_a_d_m_e.i  delbin.bat.i  delcvs.bat.i  tgzsrc.i  version.txt.i  zipsrc.bat.i
scintilla/.hg/store/data/cocoa/: _framework.mk.i  _info_bar.h.i  _info_bar.mm.i  _info_bar_communicator.h.i  _plat_cocoa.h.i  _plat_cocoa.mm.i  _quartz_text_layout.h.i  _quartz_text_style.h.i  _quartz_text_style_attribute.h.i  _sci_test.mk.i  _scintilla_call_tip.h.i  _scintilla_call_tip.mm.i  _scintilla_cocoa.h.i  _scintilla_cocoa.mm.i  _scintilla_list_box.h.i  _scintilla_list_box.mm.i  _scintilla_view.h.i  _scintilla_view.mm.i  common.mk.i
scintilla/.hg/store/data/doc/: _design.html.i  _icons.html.i  _lexer.txt.i  _sci_break.jpg.i  _sci_coding.html.i  _sci_rest.jpg.i  _sci_t_e_ico.png.i  _sci_word.jpg.i  _scintilla_doc.html.d  _scintilla_doc.html.i  _scintilla_download.html.i  _scintilla_history.html.d  _scintilla_history.html.i  _scintilla_related.html.i  _scintilla_to_do.html.i  _scintilla_usage.html.i  _steps.html.i  annotations.png.i  index.html.i  styledmargin.png.i
scintilla/.hg/store/data/gtk/: _converter.h.i  _plat_g_t_k.cxx.i  _scintilla_g_t_k.cxx.i  deps.mak.i  makefile.i  scintilla-marshal.c.i  scintilla-marshal.h.i  scintilla-marshal.list.i  scintilla.mak.i
scintilla/.hg/store/data/include/: .cvsignore.i  _accessor.h.i  _face.py.i  _h_facer.py.i  _i_lexer.h.i  _key_words.h.i  _platform.h.i  _pos_reg_exp.h.i  _prop_set.h.i  _s_string.h.i  _sci_lexer.h.i  _scintilla.h.i  _scintilla.iface.i  _scintilla_widget.h.i  _win_defs.h.i  _window_accessor.h.i
scintilla/.hg/store/data/lexers/: _lex_a68k.cxx.i  _lex_a_p_d_l.cxx.i  _lex_a_s_y.cxx.i  _lex_a_u3.cxx.i  _lex_a_v_e.cxx.i  _lex_a_v_s.cxx.i  _lex_abaqus.cxx.i  _lex_ada.cxx.i  _lex_asm.cxx.i  _lex_asn1.cxx.i  _lex_baan.cxx.i  _lex_bash.cxx.i  _lex_basic.cxx.i  _lex_bullant.cxx.i  _lex_c_l_w.cxx.i  _lex_c_o_b_o_l.cxx.i  _lex_c_p_p.cxx.i  _lex_c_s_s.cxx.i  _lex_caml.cxx.i  _lex_cmake.cxx.i  _lex_coffee_script.cxx.i  _lex_conf.cxx.i  _lex_crontab.cxx.i  _lex_csound.cxx.i  _lex_d.cxx.i  _lex_e_c_l.cxx.i  _lex_e_script.cxx.i  _lex_eiffel.cxx.i  _lex_erlang.cxx.i  _lex_flagship.cxx.i  _lex_forth.cxx.i  _lex_fortran.cxx.i  _lex_g_a_p.cxx.i  _lex_gui4_cli.cxx.i  _lex_h_t_m_l.cxx.i  _lex_haskell.cxx.i  _lex_inno.cxx.i  _lex_kix.cxx.i  _lex_lisp.cxx.i  _lex_lout.cxx.i  (+45 more)
scintilla/.hg/store/data/lexlib/: _accessor.cxx.i  _accessor.h.i  _character_set.cxx.i  _character_set.h.i  _lex_accessor.h.i  _lexer_base.cxx.i  _lexer_base.h.i  _lexer_module.cxx.i  _lexer_module.h.i  _lexer_no_exceptions.cxx.i  _lexer_no_exceptions.h.i  _lexer_simple.cxx.i  _lexer_simple.h.i  _option_set.h.i  _prop_set_simple.cxx.i  _prop_set_simple.h.i  _sparse_state.h.i  _style_context.cxx.i  _style_context.h.i  _word_list.cxx.i  _word_list.h.i
scintilla/.hg/store/data/macosx/: _ext_input.cxx.i  _ext_input.h.i  _plat_mac_o_s_x.cxx.i  _plat_mac_o_s_x.h.i  _quartz_text_layout.h.i  _quartz_text_style.h.i  _quartz_text_style_attribute.h.i  _scintilla_call_tip.cxx.i  _scintilla_call_tip.h.i  _scintilla_list_box.cxx.i  _scintilla_list_box.h.i  _scintilla_mac_o_s_x.cxx.i  _scintilla_mac_o_s_x.h.i  _t_carbon_event.cxx.i  _t_carbon_event.h.i  _t_rect.h.i  _t_view.cxx.i  _t_view.h.i  deps.mak.i  makefile.i
scintilla/.hg/store/data/src/: _accessor.cxx.i  _auto_complete.cxx.i  _auto_complete.h.i  _call_tip.cxx.i  _call_tip.h.i  _catalogue.cxx.i  _catalogue.h.i  _cell_buffer.cxx.i  _cell_buffer.h.i  _char_classify.cxx.i  _char_classify.h.i  _character_set.h.i  _contraction_state.cxx.i  _contraction_state.h.i  _decoration.cxx.i  _decoration.h.i  _document.cxx.i  _document.h.i  _document_accessor.cxx.i  _document_accessor.h.i  _editor.cxx.d  _editor.cxx.i  _editor.h.i  (+120 more)
scintilla/CVS/: Entries
scintilla/cocoa/CVS/: Entries
scintilla/cocoa/ScintillaFramework/CVS/: Entries
scintilla/cocoa/ScintillaTest/CVS/: Entries
scintilla/cocoa/res/CVS/: Entries
scintilla/doc/CVS/: Entries
scintilla/gtk/CVS/: Entries
scintilla/include/: Scintilla.iface
scintilla/include/CVS/: Entries
scintilla/macosx/CVS/: Entries
scintilla/macosx/SciTest/CVS/: Entries
scintilla/src/: LexCaml.cxx  LexHTML.cxx  LexSpice.cxx
scintilla/src/CVS/: Entries
scintilla/test/CVS/: Entries
scintilla/test/examples/CVS/: Entries
scintilla/vcbuild/CVS/: Entries
scintilla/win32/CVS/: Entries
src/: .gitignore  Makefile.am  accessors.c  buildc.sh  constants.h  cpp.c  cpp.vala  demo.c  enums.c.tpl  enums.h.tpl  functions.c  functions.h.bak  gtkeditor.c  gtkeditor.h  gtkeditor.vala  gtkeditorstyle.c  gtkeditorstyle.vala  gtkieditorlexer.c  gtkieditorlexer.vala  gtkscintilla.c  gtkscintilla.h  gtkscintillafunctions.c  gtkscintillafunctions.h  gtkscintillaproperties.c  lexer.c  lexer.h  perl.c  perl.vala  properties.c  properties.h  propertyspecs.c  python.c  python.vala  search.c  signals.c  signals.h  style-properties.c  style-properties.h  style.c  style.h  (+2 more)
src/lexers/: lexabaqus.h  lexada.h  lexapdl.h  lexasm.h  lexasn1.h  lexasp.h  lexasymptote.h  lexau3.h  lexave.h  lexbaan.h  lexbash.h  lexbatch.h  lexbullant.h  lexcaml.h  lexclw.h  lexcmake.h  lexconf.h  lexcpp.h  lexcsound.h  lexcss.h  lexd.h  lexdiff.h  lexeiffel.h  lexeiffelkw.h  lexerlang.h  lexerrorlist.h  lexers.h  lexescript.h  lexf77.h  lexflagship.h  lexforth.h  lexfortran.h  lexgap.h  lexgui4cli.h  lexhaskell.h  lexhtml.h  lexinnosetup.h  lexkix.h  lexlatex.h  lexlisp.h  (+48 more)
src/lexers/patches/: lexphp_states.h  lexphp_states.patch  lexxml_states.h  lexxml_states.patch
src/vapi/: Scintilla.vapi
(+150 files in other folders)
