bin_PROGRAMS = demo demo2

demo_CFLAGS = @GTK_CFLAGS@ -I$(top_builddir)/src -I$(top_builddir)/scintilla/include
demo_LDADD = @GTK_LIBS@ $(top_builddir)/build/libgtkscintilla-1.0.la
demo_SOURCES = demo.c

demo2_CFLAGS = @GTK_CFLAGS@ -I$(top_builddir)/src -I$(top_builddir)/scintilla/include
demo2_LDADD = @GTK_LIBS@ $(top_builddir)/build/libgtkscintilla-1.0.la
demo2_SOURCES = demo2.c
