
lib_LTLIBRARIES = libscintilla.la
libscintilla_la_LDFLAGS = -version-info 0:0:0
libscintilla_la_CPPFLAGS = -I../scintilla/include \
							-I../scintilla/src \
							-I../scintilla/lexlib \
							-Wall -Wno-missing-braces -Wno-char-subscripts \
							-Wno-long-long -pedantic -DGTK -DSCI_LEXER @GTK_CFLAGS@
libscintilla_la_LIBADD = @GTK_LIBS@
include_HEADERS = ../scintilla/include/Scintilla.h \
					../scintilla/include/SciLexer.h \
					../scintilla/include/ScintillaWidget.h

libscintilla_la_SOURCES = \
	../scintilla/src/PositionCache.cxx  \
	../scintilla/src/Indicator.cxx \
	../scintilla/src/Style.cxx \
	../scintilla/src/ScintillaBase.cxx \
	../scintilla/src/CharClassify.cxx \
	../scintilla/src/ContractionState.cxx \
	../scintilla/src/Document.cxx \
	../scintilla/src/PerLine.cxx \
	../scintilla/src/AutoComplete.cxx \
	../scintilla/src/ViewStyle.cxx \
	../scintilla/src/ExternalLexer.cxx \
	../scintilla/src/XPM.cxx \
	../scintilla/src/CellBuffer.cxx \
	../scintilla/src/RESearch.cxx \
	../scintilla/src/KeyMap.cxx \
	../scintilla/src/Catalogue.cxx \
	../scintilla/src/RunStyles.cxx \
	../scintilla/src/UniConversion.cxx \
	../scintilla/src/LineMarker.cxx \
	../scintilla/src/Editor.cxx \
	../scintilla/src/CallTip.cxx \
	../scintilla/src/Selection.cxx \
	../scintilla/src/Decoration.cxx \
	../scintilla/gtk/PlatGTK.cxx \
	../scintilla/gtk/scintilla-marshal.c \
	../scintilla/gtk/ScintillaGTK.cxx \
	../scintilla/lexers/LexConf.cxx \
	../scintilla/lexers/LexFortran.cxx \
	../scintilla/lexers/LexPOV.cxx \
	../scintilla/lexers/LexLisp.cxx \
	../scintilla/lexers/LexASY.cxx \
	../scintilla/lexers/LexBullant.cxx \
	../scintilla/lexers/LexVB.cxx \
	../scintilla/lexers/LexBasic.cxx \
	../scintilla/lexers/LexKix.cxx \
	../scintilla/lexers/LexCrontab.cxx \
	../scintilla/lexers/LexCaml.cxx \
	../scintilla/lexers/LexPB.cxx \
	../scintilla/lexers/LexPS.cxx \
	../scintilla/lexers/LexEScript.cxx \
	../scintilla/lexers/LexOpal.cxx \
	../scintilla/lexers/LexHaskell.cxx \
	../scintilla/lexers/LexBash.cxx \
	../scintilla/lexers/LexGui4Cli.cxx \
	../scintilla/lexers/LexTAL.cxx \
	../scintilla/lexers/LexVerilog.cxx \
	../scintilla/lexers/LexVHDL.cxx \
	../scintilla/lexers/LexFlagship.cxx \
	../scintilla/lexers/LexPascal.cxx \
	../scintilla/lexers/LexAVE.cxx \
	../scintilla/lexers/LexSML.cxx \
	../scintilla/lexers/LexPLM.cxx \
	../scintilla/lexers/LexSpice.cxx \
	../scintilla/lexers/LexInno.cxx \
	../scintilla/lexers/LexCOBOL.cxx \
	../scintilla/lexers/LexPowerShell.cxx \
	../scintilla/lexers/LexForth.cxx \
	../scintilla/lexers/LexTACL.cxx \
	../scintilla/lexers/LexR.cxx \
	../scintilla/lexers/LexCLW.cxx \
	../scintilla/lexers/LexMagik.cxx \
	../scintilla/lexers/LexSQL.cxx \
	../scintilla/lexers/LexAsm.cxx \
	../scintilla/lexers/LexAsn1.cxx \
	../scintilla/lexers/LexCSS.cxx \
	../scintilla/lexers/LexLua.cxx \
	../scintilla/lexers/LexCmake.cxx \
	../scintilla/lexers/LexD.cxx \
	../scintilla/lexers/LexA68k.cxx \
	../scintilla/lexers/LexCsound.cxx \
	../scintilla/lexers/LexRuby.cxx \
	../scintilla/lexers/LexHTML.cxx \
	../scintilla/lexers/LexMMIXAL.cxx \
	../scintilla/lexers/LexAPDL.cxx \
	../scintilla/lexers/LexPowerPro.cxx \
	../scintilla/lexers/LexTCL.cxx \
	../scintilla/lexers/LexNimrod.cxx \
	../scintilla/lexers/LexPerl.cxx \
	../scintilla/lexers/LexScriptol.cxx \
	../scintilla/lexers/LexTADS3.cxx \
	../scintilla/lexers/LexGAP.cxx \
	../scintilla/lexers/LexRebol.cxx \
	../scintilla/lexers/LexTeX.cxx \
	../scintilla/lexers/LexOthers.cxx \
	../scintilla/lexers/LexMetapost.cxx \
	../scintilla/lexers/LexBaan.cxx \
	../scintilla/lexers/LexAbaqus.cxx \
	../scintilla/lexers/LexTxt2tags.cxx \
	../scintilla/lexers/LexAda.cxx \
	../scintilla/lexers/LexPython.cxx \
	../scintilla/lexers/LexMySQL.cxx \
	../scintilla/lexers/LexNsis.cxx \
	../scintilla/lexers/LexErlang.cxx \
	../scintilla/lexers/LexMPT.cxx \
	../scintilla/lexers/LexEiffel.cxx \
	../scintilla/lexers/LexProgress.cxx \
	../scintilla/lexers/LexAU3.cxx \
	../scintilla/lexers/LexMarkdown.cxx \
	../scintilla/lexers/LexSmalltalk.cxx \
	../scintilla/lexers/LexLout.cxx \
	../scintilla/lexers/LexSpecman.cxx \
	../scintilla/lexers/LexMSSQL.cxx \
	../scintilla/lexers/LexYAML.cxx \
	../scintilla/lexers/LexMatlab.cxx \
	../scintilla/lexers/LexSorcus.cxx \
	../scintilla/lexers/LexCPP.cxx \
	../scintilla/lexlib/LexerBase.cxx \
	../scintilla/lexlib/Accessor.cxx \
	../scintilla/lexlib/StyleContext.cxx \
	../scintilla/lexlib/LexerModule.cxx \
	../scintilla/lexlib/WordList.cxx \
	../scintilla/lexlib/PropSetSimple.cxx \
	../scintilla/lexlib/LexerSimple.cxx \
	../scintilla/lexlib/CharacterSet.cxx \
	../scintilla/lexlib/LexerNoExceptions.cxx
